--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="main-title">Effective Solutions
                     for Your Business</h1>
 
-                <button class="main-btn" type="button">Order Service</button>
+                <button class="main-btn" type="button" data-modal-open>Order Service</button>
 
 
             </div>
@@ -418,10 +418,90 @@
                 </ul>
             </div>
 
+            <div class="footer-sub">
+                <p class="text-sub">Subscribe</p>
+                <div class="input-btn">
+                    <input type="text" class="input-sub" name="email" placeholder="E-mail">
+                    <button class="btn-sub">Subscribe<svg class="icons-sub" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Frame"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+
 
         </div>
 
     </footer>
+
+    <div class="backdrop" data-modal>
+        <div class="modal">
+            <button class="close-btn" type="button" data-modal-close>
+                <svg class="icons-btn" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="modal-text">Leave your contacts and we will call you back</p>
+
+            <form class="form-modal">
+
+                <div class="modal-field">
+                    <label class="modal-label" for="user-name">Name</label>
+                    <div class="input-wrap">
+                        <input type="text" class="modal-input" id="user-name" name="user-name" placeholder="">
+                        <svg class="icons-form" width="18" height="24">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-field">
+                    <label class="modal-label" for="user-tel">Phone</label>
+                    <div class="input-wrap">
+                        <input type="tel" class="modal-input" id="user-tel" name="user-tel" placeholder="">
+                        <svg class="icons-form" width="18" height="24">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-field">
+                    <label class="modal-label" for="user-email">Email</label>
+                    <div class="input-wrap">
+                        <input type="email" class="modal-input" id="user-email" name="user-email" placeholder="">
+                        <svg class="icons-form" width="18" height="24">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-field">
+                    <label class="modal-label" for="user-comment">Comment</label>
+                    <textarea name="user-comment" id="user-comment" class="modal-comment"
+                        placeholder="Text input"></textarea>
+
+                </div>
+
+                <div class="consent-box">
+                    <input type="checkbox" name="consent" id="consent" class="input-consent visually-hidden"
+                        value="true">
+                    <label for="consent" class="text-consent"><span class="modal-check">
+                            <svg class="vector-check" width="10" height="8">
+                                <use href="./images/icons.svg#icon-Vector"></use>
+                            </svg>
+                        </span> I accept the terms and conditions of the <a class="text-policy" href="">Privacy
+                            Policy</a>
+                    </label>
+                </div>
+
+            </form>
+
+            <button class="send-btn" type="submit">Send</button>
+
+
+        </div>
+
+        <script src="./js/modal.js"></script>
 
 </body>
 
