--- a/index.html
+++ b/index.html
@@ -420,12 +420,14 @@
 
             <div class="footer-sub">
                 <p class="text-sub">Subscribe</p>
-                <div class="input-btn">
-                    <input type="text" class="input-sub" name="email" placeholder="E-mail">
-                    <button class="btn-sub">Subscribe<svg class="icons-sub" width="24" height="24">
-                            <use href="./images/icons.svg#icon-Frame"></use>
-                        </svg>
-                    </button>
+                <div class="container-form-sub">
+                    <form class="form-sub">
+                        <input type="email" class="input-sub" name="email" placeholder="E-mail">
+                        <button class="btn-sub" type="submit">Subscribe<svg class="icons-sub" width="24" height="24">
+                                <use href="./images/icons.svg#icon-Frame"></use>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
 
@@ -483,9 +485,9 @@
                 </div>
 
                 <div class="consent-box">
-                    <input type="checkbox" name="consent" id="consent" class="input-consent visually-hidden"
+                    <input type="checkbox" name="user-privacy" id="user-privacy" class="input-consent visually-hidden"
                         value="true">
-                    <label for="consent" class="text-consent"><span class="modal-check">
+                    <label for="user-privacy" class="text-consent"><span class="modal-check">
                             <svg class="vector-check" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
@@ -494,9 +496,11 @@
                     </label>
                 </div>
 
+                <button class="send-btn" type="submit">Send</button>
+
             </form>
 
-            <button class="send-btn" type="submit">Send</button>
+
 
 
         </div>
