--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <div class="consent-box">
                     <input type="checkbox" name="user-privacy" id="user-privacy" class="input-consent visually-hidden"
                         value="true">
-                    <label for="user-privacy" class="text-consent"><span class="modal-check">
+                    <label for="user-privacy" class="text-consent"><span class="check-modal">
                             <svg class="vector-check" width="10" height="8">
                                 <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
